- in mobile, fixed video playing offscreen - in mobile, fixed post module rendering bugs

--- a/app/assets/styles/lightbox/minireel.css
+++ b/app/assets/styles/lightbox/minireel.css
@@ -1302,7 +1302,7 @@
     ================================================ */
     .actionsModal__group {
         position:absolute; z-index: 2;
-        top:0; left:0; right:0; bottom:0;
+        top:0; left:0; right:19em; bottom:4.25em;
         overflow: hidden;
     }
     .actionsModal__list {
